Done with kalamata

--- a/src/index.html
+++ b/src/index.html
@@ -172,19 +172,19 @@
         <div class="text-center cta-links">
           <a
             href="reserve.html"
-            class="text-white hover:text-yellow-600 font-bold uppercase tracking-wide relative custom-link"
+            class="text-white  reveal-h1  hover:text-yellow-600 font-bold uppercase tracking-wide relative custom-link"
           >
             <span class="absolute reveal-h1 -left-6 top-1/2 transform -translate-y-1/2"
               >→</span
             >
             Reserve Table
           </a>
-          <div class="border-t border-gray-300 my-4 w-1/2 mx-auto"></div>
+          <div class="border-t  reveal-h1  border-gray-300 my-4 w-1/2 mx-auto"></div>
           <a
             href="#view"
             class="text-white reveal-h1 hover:text-yellow-600 font-bold uppercase tracking-wide relative custom-link"
           >
-            <span class="absolute -left-6 top-1/2 transform -translate-y-1/2"
+            <span class="absolute reveal-h1  -left-6 top-1/2 transform -translate-y-1/2"
               >→</span
             >
             View Menu
