--- a/src/index.html
+++ b/src/index.html
@@ -215,7 +215,7 @@
       intimate dinner under the stars.
     </p>
     <div class="flex text-3xl flex-col gap-2 mt-10 ml-auto">
-      <a href="reserve.html" class="relative text-lg font-bold uppercase">
+      <a href="reserve.html" class="relative  hover:text-yellow-600 text-lg font-bold uppercase">
         <span class="absolute -left-6 top-1/2 transform -translate-y-1/2">←</span>
         Reserve Table
       </a>
