--- a/src/index.html
+++ b/src/index.html
@@ -148,7 +148,7 @@
   id="sideMenu"
   class="fixed top-0   right-0 h-full w-full lg:w-1/2 bg-black text-white transform translate-x-full transition-transform duration-500 z-40 flex flex-col items-start p-8 gap-6"
 >
-  <nav class="mt-8 w-full flex flex-col gap-6 text-2xl">
+  <nav class="mt-13 w-full flex flex-col gap-6 text-2xl">
     <a href="breakfast.pdf" target="_blank" class="menu-link">Breakfast Menu</a>
     <a href="drinks.pdf" target="_blank" class="menu-link">Drinks Menu</a>
     <a href="food.pdf" target="_blank" class="menu-link">Food Menu</a>
@@ -166,25 +166,25 @@
         <h1 class="reveal-h1 text-7xl md:text-7xl font-bold">
           Welcome to Kalamata
         </h1>
-        <p class="reveal-h1 mt-4 text-lg md:text-xl">
+        <p class=" mt-4 text-lg md:text-xl">
           Experience fine dining, redefined.
         </p>
         <div class="text-center cta-links">
           <a
             href="reserve.html"
-            class="text-white  reveal-h1  hover:text-yellow-600 font-bold uppercase tracking-wide relative custom-link"
+            class="text-white    hover:text-yellow-600 font-bold uppercase tracking-wide relative custom-link"
           >
-            <span class="absolute reveal-h1 -left-6 top-1/2 transform -translate-y-1/2"
+            <span class="absolute  -left-6 top-1/2 transform -translate-y-1/2"
               >→</span
             >
             Reserve Table
           </a>
-          <div class="border-t  reveal-h1  border-gray-300 my-4 w-1/2 mx-auto"></div>
+          <div class="border-t    border-gray-300 my-4 w-1/2 mx-auto"></div>
           <a
             href="#view"
-            class="text-white reveal-h1 hover:text-yellow-600 font-bold uppercase tracking-wide relative custom-link"
+            class="text-white  hover:text-yellow-600 font-bold uppercase tracking-wide relative custom-link"
           >
-            <span class="absolute reveal-h1  -left-6 top-1/2 transform -translate-y-1/2"
+            <span class="absolute   -left-6 top-1/2 transform -translate-y-1/2"
               >→</span
             >
             View Menu
