--- a/src/index.html
+++ b/src/index.html
@@ -285,56 +285,45 @@
       </div>
     </section>
 
-    <section class="text-center  reveal-h1 py-16 bg-black text-white">
-      <h2 
-      id="view"
-      class="text-yellow-500 tracking-[0.3em]  reveal-h1 text-2xl mb-12">VIEW MENU</h2>
-      <div class="flex flex-wrap justify-center gap-6 px-4">
-        <div
-          class="menu-card"
-          style="
-            background-image: url('https://images.pexels.com/photos/27219796/pexels-photo-27219796/free-photo-of-a-close-up-of-three-drinks-with-ice-and-lemon-slices.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2');
-          "
-        >
-          <div class="overlay">
-            <h3>Drinks Menu</h3>
-          </div>
-        </div>
-
-        <div
-          class="menu-card  "
-          style="
-            background-image: url('https://images.pexels.com/photos/10078268/pexels-photo-10078268.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2');
-          "
-        >
-          <div class="overlay">
-            <h3>Food Menu</h3>
-          </div>
-        </div>
-
-        <div
-          class="menu-card"
-          style="
-            background-image: url('https://images.pexels.com/photos/20203697/pexels-photo-20203697/free-photo-of-chocolate-mousse-with-strawberries-and-whipped-cream.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load');
-          "
-        >
-          <div class="overlay">
-            <h3>Dessert Menu</h3>
-          </div>
-        </div>
-
-        <div
-          class="menu-card"
-          style="
-            background-image: url('https://images.pexels.com/photos/12360560/pexels-photo-12360560.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2');
-          "
-        >
-          <div class="overlay">
-            <h3>Business Lunch</h3>
-          </div>
+  <section class="text-center reveal-h1 py-16 bg-black text-white">
+  <h2 id="view" class="text-yellow-500 tracking-[0.3em] reveal-h1 text-2xl mb-12">VIEW MENU</h2>
+  <div class="flex flex-wrap justify-center gap-6 px-4">
+    
+    <a href="./prideinn-plaza-food-menu.pdf" target="_blank" class="block">
+      <div class="menu-card" style="background-image: url('https://images.pexels.com/photos/27219796/pexels-photo-27219796/free-photo-of-a-close-up-of-three-drinks-with-ice-and-lemon-slices.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2');">
+        <div class="overlay">
+          <h3>Drinks Menu</h3>
         </div>
       </div>
-    </section>
+    </a>
+
+    <a href="./prideinn-plaza-food-menu.pdf" target="_blank" class="block">
+      <div class="menu-card" style="background-image: url('https://images.pexels.com/photos/10078268/pexels-photo-10078268.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2');">
+        <div class="overlay">
+          <h3>Food Menu</h3>
+        </div>
+      </div>
+    </a>
+
+    <a href="./prideinn-plaza-food-menu.pdf" target="_blank" class="block">
+      <div class="menu-card" style="background-image: url('https://images.pexels.com/photos/20203697/pexels-photo-20203697/free-photo-of-chocolate-mousse-with-strawberries-and-whipped-cream.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load');">
+        <div class="overlay">
+          <h3>Dessert Menu</h3>
+        </div>
+      </div>
+    </a>
+
+    <a href="./prideinn-plaza-food-menu.pdf" target="_blank" class="block">
+      <div class="menu-card" style="background-image: url('https://images.pexels.com/photos/12360560/pexels-photo-12360560.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2');">
+        <div class="overlay">
+          <h3>Business Lunch</h3>
+        </div>
+      </div>
+    </a>
+
+  </div>
+</section>
+
   <section class="bg-black reveal-h1 text-white py-16 px-4">
       <div
         class="max-w-7xl mx-auto flex flex-col lg:flex-row justify-between gap-12"
