added pdf to side pannel

--- a/src/index.html
+++ b/src/index.html
@@ -149,10 +149,10 @@
   class="fixed top-0   right-0 h-full w-full lg:w-1/2 bg-black text-white transform translate-x-full transition-transform duration-500 z-40 flex flex-col items-start p-8 gap-6"
 >
   <nav class="mt-13 w-full flex flex-col gap-6 text-2xl">
-    <a href="breakfast.pdf" target="_blank" class="menu-link">Breakfast Menu</a>
-    <a href="drinks.pdf" target="_blank" class="menu-link">Drinks Menu</a>
-    <a href="food.pdf" target="_blank" class="menu-link">Food Menu</a>
-    <a href="dessert.pdf" target="_blank" class="menu-link">Dessert Menu</a>
+    <a href="./prideinn-plaza-food-menu.pdf" target="_blank" class="menu-link">Breakfast Menu</a>
+    <a href="./prideinn-plaza-food-menu.pdf" target="_blank" class="menu-link">Drinks Menu</a>
+    <a href="./prideinn-plaza-food-menu.pdf" target="_blank" class="menu-link">Food Menu</a>
+    <a href="./prideinn-plaza-food-menu.pdf" target="_blank" class="menu-link">Dessert Menu</a>
     <a href="reserve.html" class="menu-link">Reserve Table</a>
   </nav>
 </div>
