made cards grow on hover

--- a/src/index.html
+++ b/src/index.html
@@ -136,7 +136,7 @@
   </div>
 
   <!-- Right: Menu Button -->
- <button id="menuToggle" class="text-white hover:text-yellow-600 text-4xl z-50 relative">
+ <button id="menuToggle" class="text-white hover:text-yellow-600 text-4xl z-50 relative cursor-pointer  ">
   <img id="menuIconOpen" src="./grid (2).png" alt="Open Menu" class="w-6 h-6" />
   <img id="menuIconClose" src="./close (1).png" alt="Close Menu" class="w-6 h-6 hidden" />
 </button>
@@ -289,15 +289,17 @@
   <h2 id="view" class="text-yellow-500 tracking-[0.3em] reveal-h1 text-2xl mb-12">VIEW MENU</h2>
   <div class="flex flex-wrap justify-center gap-6 px-4">
     
-    <a href="./prideinn-plaza-food-menu.pdf" target="_blank" class="block">
+    <a href="./prideinn-plaza-food-menu.pdf" target="_blank" class="block menu-card hover:scale-105 transition-transform duration-300 cursor-pointer
+">
       <div class="menu-card" style="background-image: url('https://images.pexels.com/photos/27219796/pexels-photo-27219796/free-photo-of-a-close-up-of-three-drinks-with-ice-and-lemon-slices.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2');">
         <div class="overlay">
-          <h3>Drinks Menu</h3>
+          <h3 >Drinks Menu</h3>
         </div>
       </div>
     </a>
 
-    <a href="./prideinn-plaza-food-menu.pdf" target="_blank" class="block">
+    <a href="./prideinn-plaza-food-menu.pdf" target="_blank" class="block menu-card hover:scale-105 transition-transform duration-300 cursor-pointer
+">
       <div class="menu-card" style="background-image: url('https://images.pexels.com/photos/10078268/pexels-photo-10078268.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2');">
         <div class="overlay">
           <h3>Food Menu</h3>
@@ -305,7 +307,8 @@
       </div>
     </a>
 
-    <a href="./prideinn-plaza-food-menu.pdf" target="_blank" class="block">
+    <a href="./prideinn-plaza-food-menu.pdf" target="_blank" class="block menu-card hover:scale-105 transition-transform duration-300 cursor-pointer
+">
       <div class="menu-card" style="background-image: url('https://images.pexels.com/photos/20203697/pexels-photo-20203697/free-photo-of-chocolate-mousse-with-strawberries-and-whipped-cream.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load');">
         <div class="overlay">
           <h3>Dessert Menu</h3>
@@ -313,7 +316,8 @@
       </div>
     </a>
 
-    <a href="./prideinn-plaza-food-menu.pdf" target="_blank" class="block">
+    <a href="./prideinn-plaza-food-menu.pdf" target="_blank" class="block menu-card hover:scale-105 transition-transform duration-300 cursor-pointer
+">
       <div class="menu-card" style="background-image: url('https://images.pexels.com/photos/12360560/pexels-photo-12360560.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2');">
         <div class="overlay">
           <h3>Business Lunch</h3>
