--- a/src/index.html
+++ b/src/index.html
@@ -501,7 +501,7 @@
     <!-- Left: Location -->
     <div class="text-center md:text-left">
       <h2 class="text-xl font-semibold mb-2">Restaurant Location</h2>
-      <p class="text-lg">7th floor, One Africa Place, Waiyaki Way, Nairobi.</p>
+      <p class="text-lg">PQ77+R29, James Gichuru Road, Nairobi</p>
     </div>
 
     <!-- Center: Logo -->
