--- a/src/index.html
+++ b/src/index.html
@@ -158,13 +158,14 @@
 </div>
 
 
-
     <!-- HERO / LANDING SECTION -->
     <section class="hero-section">
       <!-- Hero Content -->
       <div class="hero-content">
         <h1 class="reveal-h1 text-7xl md:text-7xl font-bold">
-          Welcome to Kalamata
+          <!-- WELCOME TO KALAMATA -->
+ Welcome to Kalamata
+
         </h1>
         <p class=" mt-4 text-lg md:text-xl">
           Experience fine dining, redefined.
