Kalamata not botanica

--- a/src/index.html
+++ b/src/index.html
@@ -204,7 +204,7 @@
   >
     <h1 class="text-4xl font-bold reveal-h1 mb-4">From Sunrise to Starlight</h1>
     <p class="text-base mb-6">
-      Nestled high above the city on our cozy indoor floor, Botanica invites
+      Nestled high above the city on our cozy indoor floor, Kalamata invites
       you to indulge in an extraordinary dining experience. From the first
       light of breakfast to the twilight of dinner, our curated menu
       showcases the best in farm-to-table dishes.
