--- a/src/index.html
+++ b/src/index.html
@@ -243,10 +243,10 @@
         <h1 class="text-3xl md:text-4xl reveal-h1  font-bold mb-4">THE BAR</h1>
         <p class="text-sm md:text-base mb-4">
           As the sun sets, elevate your experience at the trendiest Gin Bar in
-          town, exclusively at Botanica. Located on the 7th Floor at One Africa
+          town, exclusively at Kalamata. Located on the 7th Floor at One Africa
           Place, our Gin Bar is a destination for connoisseurs and trendsetters
           alike, offering an array of innovative blends and classic concoctions.
-          Join us at Botanica for an unforgettable journey through the senses,
+          Join us at Kalamata for an unforgettable journey through the senses,
           where every dish tells a story and every moment is a celebration.
           Whether you’re a breakfast enthusiast, a lunchtime explorer, or a
           dinner connoisseur, our doors are open to welcome you.
